# eb-edge-training

./: .gitignore  README.md
edge-ai/docker/: Dockerfile  Dockerfile.build-trt  Dockerfile.with-sshd  Dockerfile.with-trt-oss
ros/docker/: Dockerfile  launch-ros2-amd-dev.sh  launch-ros2-amd-env-gpus.sh  launch-ros2-amd-env.sh  launch-ros2-amd-user-gpus.sh  launch-ros2-amd-user.sh
ros/docker/aarch64/: Dockerfile  build-env.sh
ros/docker/amd64/: Dockerfile  build-env.sh
ros/ros2_ws/src/thermo_cpp/: CMakeLists.txt
ros/ros2_ws/src/thermo_msgs/msg/: Temperature.msg
ros/ros2_ws/src/thermo_py/: package.xml  setup.py
ros/ros2_ws/src/thermo_py/thermo_py/: thermo_meter.py  thermo_monitor.py
ros/rviz_lesson/src/d2arm_robot1/: package.xml  setup.cfg  setup.py
ros/rviz_lesson/src/d2arm_robot1/config/: robot.rviz
ros/rviz_lesson/src/d2arm_robot1/launch/: rviz2.launch.py  rviz2.launch.xml  rviz2.launch.yaml
ros/rviz_lesson/src/d2arm_robot1/urdf/: robot.urdf  robot2.urdf
ros/tutorial/src/thermo_cpp/: package.xml
ros/tutorial/src/thermo_cpp/src/: thermo_meter.cpp  thermo_monitor.cpp
ros/tutorial/src/thermo_msgs/: CMakeLists.txt  package.xml
ros/tutorial/src/thermo_py/: setup.cfg  setup.py
