<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thermo_py</name>
  <version>0.0.0</version>
  <description>ROS2 sample nodes by python</description>
  <maintainer email="devuser@todo.todo">devuser</maintainer>
  <license>TODO: License declaration</license>

  <!-- added -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>thermo_msgs</exec_depend>
  <!-- added -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
